Changed file structure

--- a/app_project/static/css/output.css
+++ b/app_project/static/css/output.css
@@ -554,4 +554,17 @@ video {
   display: none;
 }
 
+.static {
+  position: static;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.text-blue-300 {
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
+}
+
 /* Your custom CSS goes here */
