--- a/app_project/reading_manager/templates/index.html
+++ b/app_project/reading_manager/templates/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading Manager</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+    <p class="logout"><a href="{% url 'logout' %}">Log Out</a></p>
     <div class="container">
-        <h1>My Reading List</h1>
+        <h1><i class="fa-solid fa-book"></i> My Reading Manager </h1>
         <div class="general-buttons">
                 <a href="{% url 'add_book' %}" class="icon-button">
                     <i class="fas fa-plus-circle"></i>
